--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -69,6 +69,27 @@
             max-width: 100%;
             margin-bottom: 15px;
         }
+        &__pills {
+            width: 830px;
+            max-width: 100%;
+            margin: auto;
+
+            button {
+                font-size: 14px;
+                font-weight: 600;
+            }
+        }
+    }
+    .recently-bought {
+        font-size: 14px;
+
+        &__box__title {
+            min-height: 42px;
+        }
+        &__box__buy {
+            width: 225px;
+            max-width: 100%;
+        }
     }
 
     @media only screen and (min-width: 768px) {
