--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,3 +21,11 @@ $max-width: 1440px;
 .container {
     max-width: $max-width;
 }
+.fullwidth {
+    width: 100%;
+}
+@media only screen and (min-width: 768px) {
+    h2 {
+        font-size: 36px;
+    }
+}
